--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-/* style.css */
-
 * {
     margin: 0;
     padding: 0;
@@ -14,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    padding: 0 10px;  /* Adiciona um pouco de espaço nas laterais */
+    padding: 0 10px;
 }
 
 h1 {
@@ -47,24 +45,22 @@ h1 {
 }
 
 #chat-messages li {
-    padding: 12px;  /* Aumenta o espaçamento interno */
+    padding: 12px;
     background-color: #e0e0e0;
     margin-bottom: 10px;
     border-radius: 8px;
     word-wrap: break-word;
-    max-width: 45%;  /* Limita a largura das mensagens */
+    max-width: 45%;
 }
 
-/* Estilo para as mensagens enviadas */
 #chat-messages .sent {
-    background-color: #d1f5d3;  /* Verde claro */
+    background-color: #d1f5d3;
     align-self: flex-end;
     text-align: right;
 }
 
-/* Estilo para as mensagens recebidas */
 #chat-messages .received {
-    background-color: #f1f0f0;  /* Cinza claro */
+    background-color: #f1f0f0;
     align-self: flex-start;
 }
 
@@ -77,17 +73,17 @@ input[type="text"] {
     border-radius: 8px;
     font-size: 16px;
     flex-shrink: 0;
-    transition: border-color 0.3s;  /* Suaviza a transição de foco */
+    transition: border-color 0.3s;
 }
 
 input[type="text"]:focus {
-    border-color: #4CAF50;  /* Cor de foco para o campo de entrada */
-    outline: none;  /* Remove o contorno padrão */
+    border-color: #4CAF50;
+    outline: none;
 }
 
 input[type="text"]::placeholder {
-    color: #888;  /* Cor do texto do placeholder */
-    opacity: 1;  /* Garante que o placeholder é opaco */
+    color: #888;
+    opacity: 1;
 }
 
 button {
@@ -100,7 +96,7 @@ button {
     font-size: 16px;
     cursor: pointer;
     flex-shrink: 0;
-    transition: background-color 0.3s;  /* Suaviza a transição de fundo */
+    transition: background-color 0.3s;
 }
 
 button:hover {
@@ -108,8 +104,8 @@ button:hover {
 }
 
 button:focus {
-    outline: none;  /* Remove o contorno padrão */
-    box-shadow: 0 0 0 2px rgba(76, 175, 80, 0.5);  /* Destaque em foco */
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(76, 175, 80, 0.5);
 }
 
 #message-container {
@@ -121,14 +117,14 @@ button:focus {
 
 @media (max-width: 600px) {
     #chat {
-        height: 300px;  /* Ajusta a altura do chat em dispositivos pequenos */
+        height: 300px;
     }
 
     input[type="text"] {
-        font-size: 14px;  /* Reduz o tamanho da fonte em dispositivos pequenos */
+        font-size: 14px;
     }
 
     button {
-        font-size: 14px;  /* Reduz o tamanho da fonte do botão em dispositivos pequenos */
+        font-size: 14px;
     }
 }
