--- a/public/style.css
+++ b/public/style.css
@@ -167,11 +167,24 @@ button:focus {
         height: 300px;
     }
 
+    #message-container {
+        flex-direction: column;  /* Coloca os elementos em coluna no mobile */
+        gap: 0;
+        width: 100%;  /* Garante que o contêiner ocupe 100% da largura da tela */
+        max-width: 100%;  /* Limita a largura ao máximo da tela */
+    }
+
+    input[type="text"], button {
+        width: 100%;  /* Ambos, campo de texto e botão, terão largura de 100% */
+        max-width: 100%;  /* Limita a largura a 100% do contêiner */
+        box-sizing: border-box;  /* Inclui o padding e borda na largura total */
+    }
+
     input[type="text"] {
-        font-size: 14px;
+        font-size: 14px;  /* Ajuste o tamanho da fonte para mobile */
     }
 
     button {
-        font-size: 14px;
+        font-size: 14px;  /* Ajuste o tamanho da fonte para mobile */
     }
 }
